--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body>
 
 <style>
+
+    .mapbox-logo{
+        display: none !important;
+    }
+
     #menu {
         background: #fff;
         position: absolute;
@@ -22,7 +27,7 @@
         top: 50px;
         right: 10px;
         border-radius: 2px;
-        width: 100px;
+        width: 80px;
         border: 1px solid rgba(255,255,255,0.4);
         font-family: 'Roboto Condensed', sans-serif;
     }
@@ -33,7 +38,7 @@
         display: block;
         margin: 0;
         padding: 0;
-        padding: 10px;
+        padding: 6px;
         text-decoration: none;
         border-bottom: 1px solid rgba(255,255,255,0.25);
         text-align: center;
@@ -65,11 +70,11 @@
         bottom: 0%;
         left: 40%;
         margin: 0px auto;
-        width: 20%;
-        padding: 6px;
+        width: 24%;
+        padding: 4px;
         border: none;
         border-radius: 2px;
-        font-size: 8px;
+        font-size: 6px;
         text-align: center;
         color: #000;
         background: rgba(255,255,255,0.33);
