--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <script src='https://api.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
 <script>
-mapboxgl.accessToken = 'pk.eyJ1IjoiY3Jhd2ZvMTAiLCJhIjoiY2lmZno0MXJmOTVwaXNlbTdneWh6Z2hsMCJ9.VVx9M0lgoRRwW1WPBv0gqg';
+mapboxgl.accessToken = 'pk.eyJ1IjoiY3Jhd2ZvMTAiLCJhIjoiY2p3NmttamJzMGw2eTRhbzl1MmJydG15aSJ9.W7EC6priJOi_Hi05aXYyjw';
 
 var map = new mapboxgl.Map({
   container: 'map',
